--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "s": "^1.0.0",
-    "style": "0.0.3",
-    "styled-components": "^4.4.1"
+    "src": "^1.1.2",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
