--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel ./public/index.html",
+    "start": "parcel ./public/index.html",
     "build": "parcel build ./public/index.html/ && cp public/_redirects dist/_redirects",
     "cy:open": "cypress open",
     "cy:run": "cypress run"
@@ -15,19 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "src": "^1.1.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "cypress": "^3.8.3",
     "parcel-bundler": "^1.12.4"
   }
 }
