--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel ./public/index.html",
+    "dev": "parcel ./public/index.html",
     "build": "parcel build ./public/index.html/ && cp public/_redirects dist/_redirects",
     "cy:open": "cypress open",
     "cy:run": "cypress run"
