--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@loadable/component": "^5.14.1",
     "graphql": "^15.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
