--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
+    "parcel": "^2.0.0",
+    "process": "^0.11.10"
   }
 }
